# legal-rlm

./: .env.example  .gitignore  API_DOCS.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  ROUNDTABLE INSTRUCTIONS.txt  analyze_all_queries.py  check_api_key.py  compare_results.py  comparison_queries.json  comparison_report.json  debug_log_20260122_021159.json  debug_log_20260122_021858.json  debug_log_20260122_022747.json  debug_log_20260122_023353.json  debug_rlm_detailed.py  debug_rlm_search.py  docker-compose.yml  eval_baseline.json  eval_latest.json  generate_legal_queries.py  init-ssl.sh  irys-rlm.service  legal_queries.json  nginx-http-only.conf  nginx-standalone.conf  nginx.conf  nginx.conf.example  pyproject.toml  quick_test.py  rlm_comparison_results.json  run.py  run_chat.py  run_claude_test.py  run_codex_test.py  run_comparative_test.py  run_eval_loop.py  run_full_test.py  (+18 more)
clients/: README.md
docs/: ASSERTION_ARCHITECTURE_SUMMARY.md  ROUNDTABLE_PROGRESS.md  ROUNDTABLE_UNITS_32_40.md  ROUNDTABLE_UNITS_41_50.md  ROUNDTABLE_UNIT_1.md  ROUNDTABLE_UNIT_10.md  ROUNDTABLE_UNIT_11.md  ROUNDTABLE_UNIT_12.md  ROUNDTABLE_UNIT_13.md  ROUNDTABLE_UNIT_14.md  ROUNDTABLE_UNIT_15.md  ROUNDTABLE_UNIT_16.md  ROUNDTABLE_UNIT_17.md  ROUNDTABLE_UNIT_18.md  ROUNDTABLE_UNIT_19.md  ROUNDTABLE_UNIT_2.md  ROUNDTABLE_UNIT_20.md  ROUNDTABLE_UNIT_21.md  ROUNDTABLE_UNIT_22.md  ROUNDTABLE_UNIT_23.md  ROUNDTABLE_UNIT_24.md  ROUNDTABLE_UNIT_25.md  ROUNDTABLE_UNIT_26.md  ROUNDTABLE_UNIT_27.md  ROUNDTABLE_UNIT_28.md  ROUNDTABLE_UNIT_29.md  ROUNDTABLE_UNIT_3.md  ROUNDTABLE_UNIT_30.md  ROUNDTABLE_UNIT_31.md  ROUNDTABLE_UNIT_4.md  ROUNDTABLE_UNIT_5.md  ROUNDTABLE_UNIT_6.md  ROUNDTABLE_UNIT_7.md  ROUNDTABLE_UNIT_8.md  ROUNDTABLE_UNIT_9.md
scripts/: deploy.sh  webhook_listener.py
test_documents/: amendment.txt  meeting_notes.txt  sample_contract.txt
(+325 files in other folders)
