[project]
name = "irys-rlm"
version = "0.1.0"
description = "Recursive Language Model system for legal document analysis"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.51.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "gradio>=5.0.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irys"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
